# amigoz-desafio-cotacoes

./: Dockerfile  LICENSE  README.md  docker-compose.yaml  pyproject.toml
amigoz_desafio_cotacoes/: main.py
amigoz_desafio_cotacoes/domain/: quotation.py  quotation_repository.py  quotation_service.py
amigoz_desafio_cotacoes/exceptions/: quotation_exceptions.py
amigoz_desafio_cotacoes/infra/: quotation_repository_impl.py
tests/: conftest.py  quotation_test.py
