[tool.poetry]
name = "amigoz-desafio-cotacoes"
version = "0.1.0"
description = "desafio tecnico da empresa amigoz"
authors = ["BDu4rTe <brianschierduarte@outlook.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.13"
httpx = "^0.28.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
pytest-cov = "^6.2.1"
isort = "^6.0.1"
taskipy = "^1.14.1"
black = "^25.1.0"
pytest-asyncio = "^1.0.0"

[tool.pytest.ini_options]
pythonpath = "."
addopts = "--doctest-modules"
markers = [
    "errors: tests to match raises errors.",
]

[tool.isort]
profile = "black"
line_length = 79

[tool.taskipy.tasks]
lint = "black --check --diff . && isort --check --diff ."
test = "pytest -xv --cov=amigoz_desafio_cotacoes"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
